# sirl

./: README.md  requirements.txt
astar_cpp/: CMakeLists.txt
astar_cpp/src/: astar_pybind.cpp
astar_cpp/tests/: test_astar.py
scripts/: dataset.py  expert_policy.py  model.py  segnet.py  test.py  train.py  utils.py
trained_models/MiniGrid-LavaLawnS16-v0/: model.pt
